--- a/run_model/.env
+++ b/run_model/.env
@@ -1,3 +1,3 @@
-DB_HOST=your_api_key
-DB_NAME=ddd
-COLLECTION_NAME=your_database_url
+DB_HOST=mongodb://localhost:27018/
+DB_NAME=DBproduct_eng
+COLLECTION_NAME=product_detection_data
